Fixed text-wrapping to break on a new line

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     font-size: 1.25rem;
     background-color: #fcf8f3;
     padding-top: 5em;
-
 }
 
 /* //////////
@@ -54,7 +53,8 @@ LAYOUT
     padding-left: 5px;
     width: 90%;
     display: flex;
-    /* overflow: auto; */
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
 }
 
 .checkbox-container {
@@ -86,8 +86,17 @@ LAYOUT
     justify-content: space-between;
 }
 
+.task-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
+    width: 8%;
+}
+
+.fa-pencil,
 .fa-trash{
-    margin-left: 0.5em;
+    cursor: pointer;
 }
 
 .line-through {
@@ -95,8 +104,16 @@ LAYOUT
     color: rgb(148, 148, 148);
 }
 
-.text-span{
-    margin-left: 1em;
+li {
+    margin-left: 1.25em;
+    margin-right: 0.25em;
+    list-style-type: none;
+    word-break: break-all;
+}
+
+h3 {
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 /*//////////////////
